--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">I'm João Afonso.</h1>
-            <h3>I'm a Portugal based <span>Data Scientist</span> with Biomedical Engineering roots working in <span>MedTech</span> during the day and in <span>Sustainability</span> at night. Let's <a class="smoothscroll" href="#about">start scrolling</a>
+            <h1 class="responsive-headline">João Afonso Pereira</h1>
+            <h3>Engaging in all stages of the <span>data science</span> lifecycle, currently leading <span>machine learning engineering</span> efforts in the <span>renewable energy</span> sector. Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
@@ -105,7 +105,7 @@
 						   <span>Porto<br>
 						         Portugal
                      </span><br>
-						   <span>(+351) 916 184 765</span><br>
+						   <span>linkedin.com/in/joao-afonso-pereira/</span><br>
                      <span>joaoafonsoppereira@gmail.com</span>
 					   </p>
 
@@ -532,7 +532,7 @@
             <div class="ten columns flex-container">
 
                <div class="flexslider">
-                  <!--
+                  
                   <ul class="slides">
 
                      <li>
@@ -556,7 +556,7 @@
                      </li> 
 
                   </ul> 
-                  -->
+                  
 
                </div> <!-- div.flexslider ends -->
 
@@ -567,99 +567,6 @@
        </div>  <!-- text-container ends -->
 
    </section> <!-- Testimonials Section End-->
-
-
-   <!-- Contact Section
-   ================================================== -->
-   <section id="contact">
-
-         <div class="row section-head">
-
-            <div class="two columns header-col">
-
-               <h1><span>Get In Touch.</span></h1>
-
-            </div>
-
-            <div class="ten columns">
-
-                  <p class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-                  eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-                  voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-                  </p>
-
-            </div>
-
-         </div>
-
-         <div class="row">
-
-            <div class="eight columns">
-
-               <!-- form -->
-               <form action="" method="post" id="contactForm" name="contactForm">
-					<fieldset>
-
-                  <div>
-						   <label for="contactName">Name <span class="required">*</span></label>
-						   <input type="text" value="" size="35" id="contactName" name="contactName">
-                  </div>
-
-                  <div>
-						   <label for="contactEmail">Email <span class="required">*</span></label>
-						   <input type="text" value="" size="35" id="contactEmail" name="contactEmail">
-                  </div>
-
-                  <div>
-						   <label for="contactSubject">Subject</label>
-						   <input type="text" value="" size="35" id="contactSubject" name="contactSubject">
-                  </div>
-
-                  <div>
-                     <label for="contactMessage">Message <span class="required">*</span></label>
-                     <textarea cols="50" rows="15" id="contactMessage" name="contactMessage"></textarea>
-                  </div>
-
-                  <div>
-                     <button class="submit">Submit</button>
-                     <span id="image-loader">
-                        <img alt="" src="images/loader.gif">
-                     </span>
-                  </div>
-
-					</fieldset>
-				   </form> <!-- Form End -->
-
-               <!-- contact-warning -->
-               <div id="message-warning"> Error boy</div>
-               <!-- contact-success -->
-				   <div id="message-success">
-                  <i class="fa fa-check"></i>Your message was sent, thank you!<br>
-				   </div>
-
-            </div>
-
-
-            <aside class="four columns footer-widgets">
-
-               <div class="widget widget_contact">
-
-					   <h4>Other contact information</h4>
-					   <p class="address">
-						   João Afonso Pereira<br>
-						   Porto<br>
-						   Portugal<br>
-						   <span>(+351) 916 184 765</span>
-					   </p>
-
-				   </div>
-
-            </aside>
-
-      </div>
-
-   </section> <!-- Contact Section End-->
-
 
    <!-- footer
    ================================================== -->
